--- a/css/global.css
+++ b/css/global.css
@@ -1,30 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+
 *{
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-    .attribution { 
-         font-size: 11px; 
-           text-align: center; 
-     }
-    .attribution a {
-         color: hsl(228, 45%, 44%);
-     } 
-.content{
+body{
     background-color: #d5e1ef;
     display: flex;
     justify-content: center;
+    min-height: 100vh;
+    align-items: center;
+
+}
+
+.content{
+    background-color: white;
+    height:100%;
+    width:350px;
+    text-align:center;
+    margin:57px; 
+    border-radius:10px;
+    box-shadow: 20px 20px 10px #808080;
 }
 
 .content__box{
-    background-color: white;
-    height: 100vh;
-    width: 60%;
-    text-align: center;
-    margin: 50px;
-    border-radius: 20px;
-}
+    margin: 10% auto;
+    }
 .content__box img{
-    padding: 20px;
-    border-radius: 30px;
+    border-radius:1rem;
+    width: 300px;
+    padding: 10px;
 }
+.content__box h2{
+    font-weight:700 ;
+    margin: 25px;
+    line-height: 30px;
+
+}
+.content__color{
+    width: 70%;
+    margin-left: 48px;
+    /* uso este para descricao dentro dos codigos no CSS  */
+}
+ .content__color p{
+    font-weight: 400;
+    margin: 1rem 0;
+    color:hsl(220, 15%, 55%);
+ }
+
+
